Closed Bug 670094 Opened 14 years ago Closed 14 years ago

nsAppRunner.cpp fails to compile on mingw

Categories

(Core :: XPCOM, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
It uses __in and __out macros that are not supported on mingw due to conflicts with GCC-provided headers. They are no-op, so removing them should be fine.
Attachment #544755 - Flags: review?(roc)
Comment on attachment 544755 [details] [diff] [review] fix v1.0 Review of attachment 544755 [details] [diff] [review]: -----------------------------------------------------------------
Attachment #544755 - Flags: review?(roc) → review+
Whiteboard: [inbound]
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: