Bug 670094 - nsAppRunner.cpp fails to compile on mingw (r=roc)